--- a/index.html
+++ b/index.html
@@ -3,39 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Elite Sports Predictor</title>
-  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.2/auth0-spa-js.production.js"></script>
-  <script src="https://js.stripe.com/v3/"></script>
+  <title>ScorePredictor Pro</title>
+  
+  <!-- Auth0 Classic Login (works perfectly on plain Netlify) -->
+  <script src="https://cdn.auth0.com/js/auth0/9.24.1/auth0.min.js"></script>
+  
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #0f172a; color: #e2e8f0; margin:0; padding:0; }
-    .container { max-width: 800px; margin: 0 auto; padding: 2rem; }
-    header { text-align: center; padding: 2rem 0; background: #1e293b; border-radius: 12px; margin-bottom: 2rem; }
-    button { padding: 12px 24px; font-size: 1.1rem; border: none; border-radius: 8px; cursor: pointer; margin: 0.5rem; }
+    body { font-family: 'Segoe UI', sans-serif; background: #0f172a; color: #e2e8f0; margin:0; padding:0; line-height: 1.6; }
+    .container { max-width: 900px; margin: 0 auto; padding: 2rem; }
+    header { text-align: center; padding: 2.5rem 1rem; background: #1e293b; border-radius: 16px; margin-bottom: 2rem; }
+    h1 { margin: 0; font-size: 2.8rem; color: #60a5fa; }
+    p.tagline { margin: 0.5rem 0 0; font-size: 1.2rem; color: #94a3b8; }
+    button { padding: 14px 28px; font-size: 1.1rem; border: none; border-radius: 10px; cursor: pointer; margin: 0.5rem; transition: 0.2s; }
     .btn-primary { background: #3b82f6; color: white; }
+    .btn-primary:hover { background: #2563eb; }
     .btn-success { background: #10b981; color: white; }
     .btn-danger { background: #ef4444; color: white; }
-    .card { background: #1e293b; padding: 1.5rem; border-radius: 12px; margin: 1rem 0; }
-    #login-section, #profile-section, #predictor { display: none; }
-    .loading { text-align: center; padding: 3rem; font-size: 1.5rem; }
-    select, input { padding: 10px; margin: 5px; border-radius: 6px; width: 100%; max-width: 300px; }
+    .card { background: #1e293b; padding: 2rem; border-radius: 16px; margin: 1.5rem 0; box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
+    input, select { padding: 12px; margin: 8px 0; border-radius: 8px; border: none; width: 100%; max-width: 400px; font-size: 1rem; }
+    #profile-section, #predictor { display: none; }
+    .result { background: #172554; padding: 1.5rem; border-radius: 12px; margin-top: 1rem; font-size: 1.3rem; }
+    .loading { text-align: center; padding: 3rem; font-size: 1.4rem; }
   </style>
 </head>
 <body>
-<body>
   <div class="container">
-  <header>
-  <h1>ScorePredictor Pro</h1>
-  <p>Advanced sports prediction engine</p>
-  <div id="auth-buttons">
-    <button id="login-btn" class="btn-primary">Login / Sign Up</button>
-  </div>
-</header>
+    <header>
+      <h1>ScorePredictor Pro</h1>
+      <p class="tagline">Advanced sports prediction engine</p>
+      <div id="auth-buttons">
+        <button id="login-btn" class="btn-primary">Login / Sign Up</button>
+      </div>
+    </header>
 
-    <!-- Logged In Profile -->
+    <!-- Logged-in Profile -->
     <div id="profile-section" class="card">
-      <h2>Welcome, <span id="user-name"></span>!</h2>
+      <h2>Welcome, <span id="user-name">User</span>!</h2>
       <p>Email: <span id="user-email"></span></p>
-      <p>Status: <strong id="sub-status">Loading...</strong></p>
+      <p>Status: <strong id="sub-status">Checking...</strong></p>
       <button id="subscribe-btn" class="btn-success">Start 3-Day Free Trial → $9.99/mo</button>
       <button id="portal-btn" class="btn-primary">Manage Subscription</button>
       <button id="logout-btn" class="btn-danger">Logout</button>
@@ -51,61 +56,158 @@
         <option value="NCAAB">NCAAB</option>
         <option value="NCAAF">NCAAF</option>
       </select>
-      <input type="text" id="home-team" placeholder="Home Team (e.g. Los Angeles Lakers)" />
-      <input type="text" id="away-team" placeholder="Away Team (e.g. Boston Celtics)" />
+      <input type="text" id="home-team" placeholder="Home Team (e.g. Los Angeles Lakers)" list="teams-datalist" />
+      <input type="text" id="away-team" placeholder="Away Team (e.g. Boston Celtics)" list="teams-datalist" />
       <button id="predict-btn" class="btn-primary">Run 50,000 Simulations</button>
 
-      <div id="result" class="card" style="margin-top:1rem; display:none;">
+      <div id="result" class="result" style="display:none;">
         <h3 id="matchup"></h3>
         <p><strong>Projected Score:</strong> <span id="score"></span></p>
         <p><strong>Win Probability:</strong> <span id="prob"></span></p>
-        <p><strong>Edge vs Market:</strong> <span id="edge"></span></p>
+        <p><strong>Edge vs Market:</strong> <span id="edge" style="color:#10b981;"></span></p>
       </div>
     </div>
 
-    <div id="login-section" class="loading">Checking login status...</div>
+    <div id="loading" class="loading">Loading predictor...</div>
   </div>
 
-   <script>
-  // ← REPLACE YOUR ENTIRE <script> TAG WITH THIS ONE
-  const config = {
-    domain: typeof import !== 'undefined' && import.meta?.env?.VITE_AUTH0_DOMAIN || 
-            process.env.AUTH0_DOMAIN || 'dev-YOURDOMAIN.us.auth0.com',
-    clientId: typeof import !== 'undefined' && import.meta?.env?.VITE_AUTH0_CLIENT_ID || 
-              process.env.AUTH0_CLIENT_ID || 'YOUR_CLIENT_ID_HERE',
-    authorizationParams: {
-      redirect_uri: window.location.origin,
-      audience: typeof import !== 'undefined' && import.meta?.env?.VITE_AUTH0_AUDIENCE || 
-                process.env.AUTH0_AUDIENCE || window.location.origin,
-    },
-    useRefreshTokens: true,
-    cacheLocation: 'localstorage'
-  };
+  <!-- Team Autocomplete -->
+  <datalist id="teams-datalist"></datalist>
 
-  let auth0 = null;
+  <script>
+    // === AUTH0 CLASSIC LOGIN (GUARANTEED TO WORK) ===
+    const webAuth = new auth0.WebAuth({
+      domain:       'https://dev-3cwuyjrqj751y7nr.us.auth0.com/api/v2/'',  // ← REPLACE WITH YOUR AUTH0 DOMAIN
+      clientID:     'NN9xcCq69swXb1K6QZXmNxNzjYhDyBU9', // ← REPLACE WITH YOUR CLIENT ID
+      redirectUri:  window.location.origin,
+      responseType: 'token id_token',
+      scope:        'openid profile email'
+    });
 
-  async function initAuth() {
-    auth0 = await createAuth0Client(config);
-    if (location.search.includes('code=')) {
-      await auth0.handleRedirectCallback();
-      window.history.replaceState({}, document.title, '/');
+    const loginBtn = document.getElementById('login-btn');
+    const logoutBtn = document.getElementById('logout-btn');
+    const profileSection = document.getElementById('profile-section');
+    const predictorSection = document.getElementById('predictor');
+    const authButtons = document.getElementById('auth-buttons');
+
+    loginBtn.onclick = () => webAuth.authorize();
+
+    logoutBtn.onclick = () => {
+      localStorage.removeItem('access_token');
+      localStorage.removeItem('user');
+      location.reload();
+    };
+
+    function handleAuth() {
+      webAuth.parseHash((err, authResult) => {
+        if (authResult && authResult.accessToken) {
+          localStorage.setItem('access_token', authResult.accessToken);
+          webAuth.client.userInfo(authResult.accessToken, (err, user) => {
+            if (user) {
+              localStorage.setItem('user', JSON.stringify(user));
+              showLoggedIn(user);
+            }
+          });
+        } else if (localStorage.getItem('access_token')) {
+          const user = JSON.parse(localStorage.getItem('user') || '{}');
+          showLoggedIn(user);
+        } else {
+          document.getElementById('loading').style.display = 'none';
+        }
+      });
     }
-    if (await auth0.isAuthenticated()) {
-      const user = await auth0.getUser();
-      document.getElementById('login-section').style.display = 'none';
-      document.getElementById('profile-section').style.display = 'block';
-      document.getElementById('predictor').style.display = 'block';
-      document.getElementById('auth-buttons').style.display = 'none';
-      document.getElementById('user-name').textContent = user.name || user.nickname;
+
+    function showLoggedIn(user) {
+      document.getElementById('loading').style.display = 'none';
+      authButtons.style.display = 'none';
+      profileSection.style.display = 'block';
+      predictorSection.style.display = 'block';
+      document.getElementById('user-name').textContent = user.name || user.nickname || user.email;
+      document.getElementById('user-email').textContent = user.email;
+      checkSubscription();
+      loadTeamList();
     }
-  }
 
-  document.getElementById('login-btn').onclick = () => auth0.loginWithRedirect();
-  document.getElementById('logout-btn').onclick = () => auth0.logout({ returnTo: window.location.origin });
+    // === SUBSCRIPTION STATUS ===
+    async function checkSubscription() {
+      const token = localStorage.getItem('access_token');
+      if (!token) return;
+      try {
+        const res = await fetch('/.netlify/functions/get-sub-status', {
+          headers: { Authorization: `Bearer ${token}` }
+        });
+        const data = await res.json();
+        document.getElementById('sub-status').textContent = data.status === 'active' || data.status === 'trialing' ? 'Premium Active' : 'Free Tier';
+        document.getElementById('subscribe-btn').style.display = (data.status === 'active' || data.status === 'trialing') ? 'none' : 'inline-block';
+      } catch (e) { console.log("Sub check failed"); }
+    }
 
-  initAuth().catch(console.error);
+    // === TEAM AUTOCOMPLETE ===
+    function loadTeamList() {
+      fetch('/data/all-teams.json')
+        .then(r => r.json())
+        .then(data => {
+          const league = document.getElementById('league').value;
+          const teams = data[league] || [];
+          const datalist = document.getElementById('teams-datalist');
+          datalist.innerHTML = teams.map(t => `<option value="${t}">`).join('');
+        });
+      document.getElementById('league').addEventListener('change', loadTeamList);
+    }
+
+    // === RUN PREDICTION ===
+    document.getElementById('predict-btn').onclick = async () => {
+      const league = document.getElementById('league').value;
+      const home = document.getElementById('home-team').value.trim();
+      const away = document.getElementById('away-team').value.trim();
+      if (!home || !away) return alert("Enter both teams");
+
+      const token = localStorage.getItem('access_token');
+      const res = await fetch('/.netlify/functions/predict-matchup', {
+        method: 'POST',
+        headers: { 
+          'Authorization': `Bearer ${token}`,
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
+      });
+
+      const data = await res.json();
+      if (res.ok) {
+        document.getElementById('matchup').textContent = data.matchup;
+        document.getElementById('score').textContent = data.projectedScore;
+        document.getElementById('prob').textContent = `${data.winProbability[home]} (home) vs ${data.winProbability[away]} (away)`;
+        document.getElementById('edge').textContent = data.edgeVsMarket || 'No edge';
+        document.getElementById('result').style.display = 'block';
+      } else {
+        alert(data.error || "Prediction failed — upgrade required");
+      }
+    };
+
+    // === STRIPE CHECKOUT & PORTAL ===
+    document.getElementById('subscribe-btn').onclick = async () => {
+      const token = localStorage.getItem('access_token');
+      const res = await fetch('/.netlify/functions/create-checkout', { 
+        method: 'POST', 
+        headers: { Authorization: `Bearer ${token}` } 
+      });
+      const { sessionId } = await res.json();
+      const stripe = Stripe('pk_test_51SWMmIRxyYGJWef5XLY849urbo6cpkCGmS4qYYberntF5a4r114xCqZMbbIu42N3tqDjuuJe4tq2FZjl70qzjPMI00goAufZHb'); // ← replace with your publishable key
+      stripe.redirectToCheckout({ sessionId });
+    };
+
+    document.getElementById('portal-btn').onclick = async () => {
+      const token = localStorage.getItem('access_token');
+      const res = await fetch('/.netlify/functions/create-portal', { 
+        method: 'POST', 
+        headers: { Authorization: `Bearer ${token}` } 
+      });
+      const { url } = await res.json();
+      window.location.href = url;
+    };
+
+    // === INIT ===
+    handleAuth();
   </script>
-  </body>
-</html>
 </body>
 </html>
