debug auth0 with real values + logs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <script>
     // === AUTH0 CLASSIC LOGIN (GUARANTEED TO WORK) ===
     const webAuth = new auth0.WebAuth({
-      domain:       'https://dev-3cwuyjrqj751y7nr.us.auth0.com/api/v2/'',  // ← REPLACE WITH YOUR AUTH0 DOMAIN
+      domain:       'dev-3cwuyjrqj751y7nr.us.auth0.com'',  // ← REPLACE WITH YOUR AUTH0 DOMAIN
       clientID:     'NN9xcCq69swXb1K6QZXmNxNzjYhDyBU9', // ← REPLACE WITH YOUR CLIENT ID
       redirectUri:  window.location.origin,
       responseType: 'token id_token',
