--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ScorePredictor Pro</title>
-  
-  <!-- Auth0 Classic Login (works perfectly on plain Netlify) -->
-  <script src="https://cdn.auth0.com/js/auth0/9.24.1/auth0.min.js"></script>
-  
+
+  <!-- Auth0 SPA SDK (modern, supports Google/Apple/Twitter/Facebook/Email perfectly) -->
+  <script src="https://cdn.auth0.com/js/auth0-spa-js/2.1/auth0-spa-js.production.min.js"></script>
+
   <style>
     body { font-family: 'Segoe UI', sans-serif; background: #0f172a; color: #e2e8f0; margin:0; padding:0; line-height: 1.6; }
     .container { max-width: 900px; margin: 0 auto; padding: 2rem; }
@@ -24,6 +24,7 @@
     #profile-section, #predictor { display: none; }
     .result { background: #172554; padding: 1.5rem; border-radius: 12px; margin-top: 1rem; font-size: 1.3rem; }
     .loading { text-align: center; padding: 3rem; font-size: 1.4rem; }
+    .remember { margin-top: 12px; color: #cbd5e1; }
   </style>
 </head>
 <body>
@@ -31,9 +32,7 @@
     <header>
       <h1>ScorePredictor Pro</h1>
       <p class="tagline">Advanced sports prediction engine</p>
-      <div id="auth-buttons">
-        <button id="login-btn" class="btn-primary">Login / Sign Up</button>
-      </div>
+      <div id="auth-buttons"></div>
     </header>
 
     <!-- Logged-in Profile -->
@@ -71,143 +70,169 @@
     <div id="loading" class="loading">Loading predictor...</div>
   </div>
 
-  <!-- Team Autocomplete -->
   <datalist id="teams-datalist"></datalist>
 
   <script>
-    // === AUTH0 CLASSIC LOGIN (GUARANTEED TO WORK) ===
-const webAuth = new auth0.WebAuth({
-  domain:       'dev-3cwuyjrqj751y7nr.us.auth0.com',     // ← correct tenant
-  clientID:     'R8YeJdb0ZGuXY0QLcO1FexwRmCrfpw1w',     // ← correct client ID
-  redirectUri:  window.location.origin,                  // this is fine now
-  responseType: 'token id_token',
-  scope:        'openid profile email'
-});
+    // === AUTH0 SPA SDK (Google, Apple, Twitter, Facebook, Email) ===
+    let auth0Client = null;
 
-    const loginBtn = document.getElementById('login-btn');
-    const logoutBtn = document.getElementById('logout-btn');
-    const profileSection = document.getElementById('profile-section');
-    const predictorSection = document.getElementById('predictor');
-    const authButtons = document.getElementById('auth-buttons');
-
-    loginBtn.onclick = () => webAuth.authorize();
-
-    logoutBtn.onclick = () => {
-      localStorage.removeItem('access_token');
-      localStorage.removeItem('user');
-      location.reload();
+    const initAuth0 = async () => {
+      auth0Client = await createAuth0Client({
+        domain: "dev-3cwuyjrqj751y7nr.us.auth0.com",
+        client_id: "R8YeJdb0ZGuXY0QLcO1FexwRmCrfpw1w",
+        cacheLocation: "localstorage",
+        useRefreshTokens: true
+      });
     };
 
-    function handleAuth() {
-      webAuth.parseHash((err, authResult) => {
-        if (authResult && authResult.accessToken) {
-          localStorage.setItem('access_token', authResult.accessToken);
-          webAuth.client.userInfo(authResult.accessToken, (err, user) => {
-            if (user) {
-              localStorage.setItem('user', JSON.stringify(user));
-              showLoggedIn(user);
-            }
-          });
-        } else if (localStorage.getItem('access_token')) {
-          const user = JSON.parse(localStorage.getItem('user') || '{}');
-          showLoggedIn(user);
-        } else {
-          document.getElementById('loading').style.display = 'none';
-        }
-      });
-    }
+    // Login button + Remember me checkbox
+    document.getElementById("auth-buttons").innerHTML = `
+      <button id="login-btn" class="btn-primary">Login / Sign Up</button>
+      <div class="remember">
+        <label>
+          <input type="checkbox" id="remember-me" checked> Remember me
+        </label>
+      </div>
+    `;
 
-    function showLoggedIn(user) {
-      document.getElementById('loading').style.display = 'none';
-      authButtons.style.display = 'none';
-      profileSection.style.display = 'block';
-      predictorSection.style.display = 'block';
-      document.getElementById('user-name').textContent = user.name || user.nickname || user.email;
-      document.getElementById('user-email').textContent = user.email;
-      checkSubscription();
+    document.getElementById("login-btn").onclick = async () => {
+      const remember = document.getElementById("remember-me").checked;
+      await auth0Client.loginWithRedirect({
+        redirect_uri: window.location.origin,
+        prompt: remember ? "login" : "none"
+      });
+    };
+
+    document.getElementById("logout-btn").onclick = async () => {
+      localStorage.clear();
+      await auth0Client.logout({
+        returnTo: window.location.origin
+      });
+    };
+
+    // On load / after redirect
+    window.addEventListener("load", async () => {
+      await initAuth0();
+
+      // Handle the redirect back from Auth0
+      if (window.location.search.includes("code=") || window.location.search.includes("error=")) {
+        await auth0Client.handleRedirectCallback();
+        window.history.replaceState({}, document.title, "/");
+      }
+
+      const isAuthenticated = await auth0Client.isAuthenticated();
+
+      if (isAuthenticated) {
+        const user = await auth0Client.getUser();
+        showLoggedIn(user);
+      } else {
+        document.getElementById("loading").style.display = "none";
+      }
+    });
+
+    async function showLoggedIn(user) {
+      document.getElementById("loading").style.display = "none";
+      document.getElementById("auth-buttons").style.display = "none";
+      document.getElementById("profile-section").style.display = "block";
+      document.getElementById("predictor").style.display = "block";
+
+      document.getElementById("user-name").textContent = user.name || user.nickname || user.email.split("@")[0];
+      document.getElementById("user-email").textContent = user.email;
+
+      // ADMIN EMAILS — FREE UNLIMITED FOREVER
+      const ADMIN_EMAILS = [
+        "theartofwealth123@gmail.com",     // ←←← CHANGE THIS
+        "another-admin@example.com"      // ←←← add more if you want
+      ];
+
+      if (ADMIN_EMAILS.includes(user.email)) {
+        document.getElementById("sub-status").textContent = "ADMIN – Unlimited Forever";
+        document.getElementById("subscribe-btn").style.display = "none";
+        document.getElementById("portal-btn").style.display = "none";
+      } else {
+        await checkSubscription();
+      }
+
       loadTeamList();
     }
 
-    // === SUBSCRIPTION STATUS ===
+    // === YOUR EXISTING FUNCTIONS (unchanged) ===
     async function checkSubscription() {
-      const token = localStorage.getItem('access_token');
-      if (!token) return;
+      const token = await auth0Client.getTokenSilently();
       try {
         const res = await fetch('/.netlify/functions/get-sub-status', {
           headers: { Authorization: `Bearer ${token}` }
         });
         const data = await res.json();
-        document.getElementById('sub-status').textContent = data.status === 'active' || data.status === 'trialing' ? 'Premium Active' : 'Free Tier';
-        document.getElementById('subscribe-btn').style.display = (data.status === 'active' || data.status === 'trialing') ? 'none' : 'inline-block';
-      } catch (e) { console.log("Sub check failed"); }
+        document.getElementById("sub-status").textContent = 
+          data.status === "active" || data.status === "trialing" ? "Premium Active" : "Free Tier";
+        document.getElementById("subscribe-btn").style.display = 
+          (data.status === "active" || data.status === "trialing") ? "none" : "inline-block";
+      } catch (e) {
+        document.getElementById("sub-status").textContent = "Free Tier";
+      }
     }
 
-    // === TEAM AUTOCOMPLETE ===
     function loadTeamList() {
       fetch('/data/all-teams.json')
         .then(r => r.json())
         .then(data => {
-          const league = document.getElementById('league').value;
+          const league = document.getElementById("league").value;
           const teams = data[league] || [];
-          const datalist = document.getElementById('teams-datalist');
+          const datalist = document.getElementById("teams-datalist");
           datalist.innerHTML = teams.map(t => `<option value="${t}">`).join('');
         });
-      document.getElementById('league').addEventListener('change', loadTeamList);
+      document.getElementById("league").addEventListener("change", loadTeamList);
     }
 
-    // === RUN PREDICTION ===
-    document.getElementById('predict-btn').onclick = async () => {
-      const league = document.getElementById('league').value;
-      const home = document.getElementById('home-team').value.trim();
-      const away = document.getElementById('away-team').value.trim();
+    document.getElementById("predict-btn").onclick = async () => {
+      const league = document.getElementById("league").value;
+      const home = document.getElementById("home-team").value.trim();
+      const away = document.getElementById("away-team").value.trim();
       if (!home || !away) return alert("Enter both teams");
 
-      const token = localStorage.getItem('access_token');
+      const token = await auth0Client.getTokenSilently();
       const res = await fetch('/.netlify/functions/predict-matchup', {
-        method: 'POST',
+        method: "POST",
         headers: { 
-          'Authorization': `Bearer ${token}`,
-          'Content-Type': 'application/json'
+          "Authorization": `Bearer ${token}`,
+          "Content-Type": "application/json"
         },
         body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
       });
 
       const data = await res.json();
       if (res.ok) {
-        document.getElementById('matchup').textContent = data.matchup;
-        document.getElementById('score').textContent = data.projectedScore;
-        document.getElementById('prob').textContent = `${data.winProbability[home]} (home) vs ${data.winProbability[away]} (away)`;
-        document.getElementById('edge').textContent = data.edgeVsMarket || 'No edge';
-        document.getElementById('result').style.display = 'block';
+        document.getElementById("matchup").textContent = data.matchup;
+        document.getElementById("score").textContent = data.projectedScore;
+        document.getElementById("prob").textContent = `${data.winProbability[home]} (home) vs ${data.winProbability[away]} (away)`;
+        document.getElementById("edge").textContent = data.edgeVsMarket || "No edge";
+        document.getElementById("result").style.display = "block";
       } else {
         alert(data.error || "Prediction failed — upgrade required");
       }
     };
 
-    // === STRIPE CHECKOUT & PORTAL ===
-    document.getElementById('subscribe-btn').onclick = async () => {
-      const token = localStorage.getItem('access_token');
+    document.getElementById("subscribe-btn").onclick = async () => {
+      const token = await auth0Client.getTokenSilently();
       const res = await fetch('/.netlify/functions/create-checkout', { 
-        method: 'POST', 
+        method: "POST", 
         headers: { Authorization: `Bearer ${token}` } 
       });
       const { sessionId } = await res.json();
-      const stripe = Stripe('pk_test_51SWMmIRxyYGJWef5XLY849urbo6cpkCGmS4qYYberntF5a4r114xCqZMbbIu42N3tqDjuuJe4tq2FZjl70qzjPMI00goAufZHb'); // ← replace with your publishable key
+      const stripe = Stripe('pk_test_51SWMmIRxyYGJWef5XLY849urbo6cpkCGmS4qYYberntF5a4r114xCqZMbbIu42N3tqDjuuJe4tq2FZjl70qzjPMI00goAufZHb');
       stripe.redirectToCheckout({ sessionId });
     };
 
-    document.getElementById('portal-btn').onclick = async () => {
-      const token = localStorage.getItem('access_token');
+    document.getElementById("portal-btn").onclick = async () => {
+      const token = await auth0Client.getTokenSilently();
       const res = await fetch('/.netlify/functions/create-portal', { 
-        method: 'POST', 
+        method: "POST", 
         headers: { Authorization: `Bearer ${token}` } 
       });
       const { url } = await res.json();
       window.location.href = url;
     };
-
-    // === INIT ===
-    handleAuth();
   </script>
 </body>
 </html>
